--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@nestjs/common": "^11.1.8",
         "@nestjs/core": "^11.1.8",
+        "@nestjs/mapped-types": "^2.1.0",
         "@nestjs/platform-express": "^11.1.8",
         "@nestjs/typeorm": "^11.0.0",
         "axios": "^1.13.2",
