--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@nestjs/platform-express": "^11.1.8",
         "@nestjs/typeorm": "^11.0.0",
         "axios": "^1.13.2",
+        "jsonwebtoken": "^9.0.3",
         "pg": "^8.16.3",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.2",
