--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@nestjs/mapped-types": "^2.1.0",
         "@nestjs/platform-express": "^11.1.8",
         "@nestjs/typeorm": "^11.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
         "axios": "^1.13.2",
         "jsonwebtoken": "^9.0.3",
         "pg": "^8.16.3",
